Dispaly sticky notes where they were placed

--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -37,3 +37,15 @@
     transform: rotate(360deg);
   }
 }
+
+.stickersRoot {
+  position: relative;
+}
+
+.stickyNote {
+  position: absolute;
+}
+
+#editor {
+  margin: 0 auto;
+}
