--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
   background-color: rgb(219, 219, 219);
@@ -46,6 +50,22 @@
 
 .stickyNote {
   position: absolute;
+  text-align: left;
+
+  min-width: '200px';
+  height: '100px';
+  background-color: #f2d233;
+}
+.stickyNote .delete {
+  cursor: pointer;
+  width: 15px;
+  vertical-align: top;
+}
+.stickyNote textarea {
+  max-width: calc(100% - 30px);
+  max-height: calc(100% - 30px);
+  background-color: #f2d233;
+  resize: none;
 }
 
 #editor {
