--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -2,9 +2,12 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: rgb(225, 238, 255);
+}
+
 .App {
   text-align: center;
-  background-color: rgb(219, 219, 219);
 }
 
 .App-logo {
