Add creator field to sticky notes

--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -94,3 +94,9 @@ form input {
 .userList h2 {
   margin-top: 0;
 }
+
+.noteCreator {
+  margin-left: 5px;
+  font-size: 12px;
+  margin-bottom: 5px;
+}
